--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -42,10 +42,21 @@ h2 {
 h3 {
     font-size: 20px;
 }
+pre {
+    background-color: #F8F8FF !important;
+    border: 1px solid #DEDEDE !important;
+    color: #444 !important;
+    font-size: 12px !important;
+    line-height: 1.5em !important;
+    margin: 1em 0px !important;
+    overflow: auto !important;
+    padding: 0.5em !important;
+}
 #header {
     margin: 0 auto 15px auto;
     padding: 20px;
-    width: 750px;
+    text-shadow: 0px 2px 3px #fff;
+    width: 775px;
 }
 #header span {
     color: #52ac9a;
@@ -70,20 +81,35 @@ h3 {
 
 #info {
     float: left;
-    width: 95px;
-    padding: 20px 10px 5px 8px;
-    margin-left: 20px;
-    text-align: center;
-    border-radius: 300px;
-    background-color: #fff;
-}
-#info p {
-    margin: 0px 0px 15px;
+    width: 110px;
+    height: 50px;
+    position: relative;
+    display: block;
+    margin-right: 40px;
+    color: #52ac9a;
+    text-shadow: 0px 2px 3px #fff;
 }
 #info .day {
-    font-size: 65px;
+    position: absolute;
+    font-size: 70px;
+    line-height: 60px;
+    top: 0px;
+    left: 0px;
 }
-
+#info .month {
+    position: absolute;
+    font-size: 37px;
+     line-height: 37px;
+    top: 0px;
+    right: 0px;
+}
+#info .year {
+    position: absolute;
+    font-size: 17px;
+     line-height: 17px;
+    bottom: 0px;
+    right: 0px;
+}
 blockquote {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-style: italic;
@@ -91,7 +117,9 @@ blockquote {
     font-size: 18px;
     color: #404040;
     padding: 20px;
-    margin: 0 0 25px 0;
     border-top: #404040 solid 1px;
     border-bottom: #404040 solid 1px;
+}
+blockquote p {
+    margin: 0;
 }
