--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<link rel="stylesheet" href="media/css/screen.css" type="text/css" media="screen" charset="utf-8" />
-	<title>{% block title %}{{ title }}{% endblock %}</title>
+	<title>{% block title %}{{ page.title }}{% endblock %}</title>
 </head>
 <body>
 	<div id="header">
