added in a page manager test chunk

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,14 +2,17 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<link rel="stylesheet" href="media/css/screen.css" type="text/css" media="screen" charset="utf-8" />
+	<link rel="stylesheet" href="/media/css/screen.css" type="text/css" media="screen" charset="utf-8" />
 	<title>{% block title %}{{ page.title }}{% endblock %}</title>
 </head>
 <body>
 	<div id="header">
-		<h2>Jon <span>Smelquist</span></h2>
+		<a href="/"><h2>Jon <span>Smelquist</span></h2></a>
 	</div>
 	<div id="container">
+		{% for page in pages.in_path("posts") %}
+				<a href="{{ page.url }}">{{ page.title }}</a>
+		{% endfor %}
 		{% block content %}
 		{% endblock content %}
 	</div>
