--- a/media/css/screen.css
+++ b/media/css/screen.css
@@ -40,7 +40,7 @@ h2 {
 	text-align: left;
 }
 h3 {
-    font-size: 20px;
+    font-size: 25px;
 }
 pre {
     background-color: #F8F8FF !important;
@@ -56,7 +56,10 @@ pre {
     margin: 0 auto 15px auto;
     padding: 20px;
     text-shadow: 0px 2px 3px #fff;
-    width: 775px;
+    width: 625px;
+}
+#header a{
+    text-decoration: none;
 }
 #header span {
     color: #52ac9a;
